<resources>
    <string name="app_name">Network Facility Sales</string>
    <string name="app_version">1.01</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>


    <string name="we_request_again">We Request Again</string>
    <string name="dialoge_desc">Some core functionalities of the app might not work correctly without these permissions.</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="give_permissions">Give Permissions</string>
    <string name="later">Later</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="later_pressed_time">Later Pressed Time</string>


    <string name="register">REGISTER</string>
    <string name="login_serid_hint">Service ID</string>
    <string name="login_password_hint">Password</string>
    <string name="spinner_rtom">Select RTOM</string>
    <string name="spinner_type">Select TYPE</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="app_gps">GIS Facility</string>
    <string name="app_copywrite">App by DevOps</string>
    <string name="item_st">Item Type</string>
    <string name="item_prev">Previous Item</string>
    <string name="rtom">RTOM</string>
    <string name="eqtype">Network Equipment</string>
    <string name="eqtypenumber">Network Equipment Number</string>
    <string name="lea">LEA</string>
    <string name="road">Road Name</string>
    <string name="Gps">GPS Location</string>
    <string name="roadloc">Location in the Road</string>
    <string name="Remark">Remarks</string>
    <string name="Feature">Feature</string>
    <string name="LAC">LAC</string>
    <string name="CusName">Customer Name</string>
    <string name="CusType">Customer Type</string>
    <string name="TowerOp">Tower Operater</string>
    <string name="TowerOw">Tower Owner</string>
    <string name="Building">Buildings - Building Name</string>
    <string name="tenan">Number of tenants</string>
    <string name="Pole">Pole Name</string>
    <string name="PlMake">Pole Make</string>
    <string name="PlHei">Pole Height</string>
    <string name="PlType">Pole Type</string>
    <string name="PlPower">With power enclosure</string>
    <string name="PlMounted">With mounted MSAN</string>
    <string name="PlRiser">With riser pipe</string>
    <string name="PlStays">Number of Stays</string>
    <string name="PlStrut">Pole with strut</string>
    <string name="PlOverhead">Pole with Overhead guy</string>
    <string name="PlBarbed">Pole with Barbed wire</string>
    <string name="TextImg">Images</string>
    <string name="eqName">Equipmnet Name</string>
    <string name="PrevEq">Previous Equipment</string>
    <string name="Tower">Towers</string>
    <string name="title_activity_view_maps">Map</string>
    <string name="user">User Details</string>
    <string name="home">Home</string>
    <string name="grant">Granted Facilities</string>
    <string name="contactno">Mobile No</string>
    <string name="mail">Email</string>
    <string name="logout">Logout</string>
    <string name="regMob">Registerd Mobile</string>
    <string name="serial">Serial No</string>
    <string name="MHHHType">MH/HH Type</string>
    <string name="Ways">No of Ways</string>


    <!-- net facility strings -->
    <string name="service_type">Requested Service</string>
    <string name="go_to_map">Check Availability</string>
    <string name="resved_number">Reserved Number</string>
    <string name="bbpkg">BB Package</string>
    <string name="iptvpkg">IPTV Package</string>
    <string name="selected_dp">DP/FDP</string>
    <string name="selected_dpindex">Index</string>
    <string name="no_search">Get NOs</string>
    <string name="area">Area</string>
    <string name="startno">Start No</string>
    <string name="nearestno">Nearest No</string>
    <string name="endno">End No</string>
    <string name="cus_name">Customer Name</string>
    <string name="nic">NIC</string>
    <string name="email">Email</string>
    <string name="con_number">Contact Number</string>
    <string name="save">Save</string>

    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="regdate">Registerd Date</string>
    <string name="userid">User ID</string>
    <string name="username">User</string>



    <string name="err_nortom">RTOM or Service Type Cannot be Null</string>
    <string name="err_nosig">Signature Cannot be Null</string>
    <string name="err_nolocation">Please Turn On Location Service to Continue</string>
    <string name="err_nopath">Error Path Generation Failed</string>
    <string name="err_no_number_select">Area Code or Staring Number Cannot be Null</string>
    <string name="err_no_contact_name">Customer Name,Contact,NIC and Address Cannot be Null</string>
    <string name="err_invalid_starting_no">Nearest Number Must be 10 Digit. \n Querying Without a Number Will Take Time to Get Data</string>
    <string name="err_invalid_res_no">Reserved Number Cannot be Null</string>
    <string name="err_invalid_starting_no2">Number Must Start with 2</string>
    <string name="err_noimages">Images are Mandatory</string>

    <string name="upload_success">Upload Success!</string>

    <!--net facility map info window -->
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="Used">Used</string>
    <string name="Free">Free</string>
    <string name="distance">Distance</string>
    <string name="infowindowmsg">Touch and Hold to Select</string>
    <string name="cus_address">Customer Address</string>
    <string name="cus_nic">NIC Images(Both Sides)</string>
    <string name="cus_sig">Customer Signature (Tap to Clear)</string>

    <!--fault analizer  -->
    <string name="faultnumber">Fault Number</string>
    <string name="dploc">DP/FDP Location</string>
    <string name="cusloc">Customer Location</string>
    <string name="cuslocup">Update Customer Location</string>

    <string name="err_nofltno">Please Enter a Pending Fault Number</string>


    <!--customer tag  -->
    <string name="cusno">Voice Number</string>
    <string name="sw">MSAN Details</string>
    <string name="dp">DP/FDP Details</string>
    <string name="rout_cusloc">Route to Customer Location</string>
    <string name="rout_msanloc">Route to Msan</string>
    <string name="rout_dploc">Route to DP/FDP</string>
    <string name="update_cusloc">Update Customer Location</string>
    <string name="add_cusloc">Add Customer Location</string>
    <string name="cr">Customer ID</string>
    <string name="acc">Account NO</string>

    <string name="err_novoiceno">Please Enter a Valid Voice Number</string>

    <string name="sod">Service Order</string>
    <string name="tpno">Circuit Name</string>
    <string name="stype">Service Type</string>
    <string name="indate">Recieved Date</string>
    <string name="ordertype">Order Type</string>
    <string name="cusname">Customer Name</string>
    <string name="cusaddress">Customer Address</string>
    <string name="cuscontact">Customer Contact</string>
    <string name="dploop">DP LOOP / MSAN Port</string>
    <string name="phnpurch">Phone Purchase From SLT</string>


    <string name="asssod">Assigned Connections</string>
    <string name="totsod">RTOM Total Connections</string>


</resources>