<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="12">


        <LinearLayout
            style="@style/parent"
            android:layout_weight="3"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical">

            <ImageView
                style="@style/parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="login background" />


        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints">

        <LinearLayout style="@style/cardViewParent">


            <androidx.cardview.widget.CardView
                android:id="@+id/linearLayout"
                style="@style/loginActivityCard"
                app:cardCornerRadius="@dimen/loginCardRadius">

                <LinearLayout style="@style/linearParent">

                    <com.tiper.MaterialSpinner
                        android:id="@+id/rtom"
                        style="@style/modifiedSpinner"
                        android:hint="@string/rtom"
                        app:spinnerMode="dialog" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/service"
                        style="@style/modifiedSpinner"
                        android:hint="@string/service_type"
                        app:spinnerMode="dialog" />

                    <Button
                        android:id="@+id/net_map"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:onClick="goto_Map_Click"
                        android:text="@string/go_to_map" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:hint="@string/selected_dp">

                            <EditText
                                android:id="@+id/dp"
                                style="@style/modifiedEditText"
                                android:enabled="false"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:hint="@string/selected_dpindex">

                            <EditText
                                android:id="@+id/dpindex"
                                style="@style/modifiedEditText"
                                android:enabled="false"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_width="0dp"
                            android:layout_weight="6"
                            android:hint="@string/nearestno">

                            <EditText
                                android:id="@+id/starno"
                                style="@style/modifiedEditText"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/nosearch"
                            style="@style/loginButton"
                            android:layout_width="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:layout_marginBottom="@dimen/loginViewsMargin"
                            android:layout_weight="4"
                            android:onClick="get_SLT_No_List"
                            android:text="@string/no_search" />


                        <ProgressBar
                            android:id="@+id/loading_indicator"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical"
                            android:visibility="gone" />
                    </LinearLayout>

                    <com.tiper.MaterialSpinner
                        android:id="@+id/number"
                        style="@style/modifiedSpinner"
                        android:hint="@string/resved_number"
                        app:spinnerMode="dialog" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/bbpkg"
                        style="@style/modifiedSpinner"
                        android:hint="@string/bbpkg"
                        android:visibility="gone"
                        app:spinnerMode="dialog" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/iptvpkg"
                        style="@style/modifiedSpinner"
                        android:hint="@string/iptvpkg"
                        android:visibility="gone"
                        app:spinnerMode="dialog" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.tiper.MaterialSpinner
                            android:id="@+id/hnorif"
                            style="@style/modifiedSpinner"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            app:spinnerMode="dialog" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:hint="@string/cus_name">

                            <EditText
                                android:id="@+id/CusName"
                                style="@style/modifiedEditText"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/nic">

                        <EditText
                            android:id="@+id/nic"
                            style="@style/modifiedEditText"
                            android:layout_height="56dp"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/email">

                        <EditText
                            android:id="@+id/email"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/con_number">

                        <EditText
                            android:id="@+id/contact_no"
                            style="@style/modifiedEditText"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/cus_address">

                        <EditText
                            android:id="@+id/cus_address"
                            style="@style/modifiedEditText"
                            android:inputType="text|textCapWords|textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/cus_nic">

                        <EditText
                            android:id="@+id/cus_nic"
                            style="@style/modifiedEditText"
                            android:focusable="false"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/imgLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/floatingtoucher"
                            app:srcCompat="@drawable/ic_launcher_background"
                            tools:ignore="VectorDrawableCompat" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:src="@drawable/floatingtoucher"
                            app:srcCompat="@drawable/ic_launcher_background"
                            tools:ignore="VectorDrawableCompat" />
                    </LinearLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:hint="@string/cus_sig">

                        <EditText
                            android:id="@+id/cus_sig"
                            style="@style/modifiedEditText"
                            android:focusable="false"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>



                    <LinearLayout
                        android:id="@+id/imgLayoutsig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border">

                        <!--<ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/floatingtoucher"
                            app:srcCompat="@drawable/ic_launcher_background"
                            tools:ignore="VectorDrawableCompat" />-->

                        <com.williamww.silkysignature.views.SignaturePad
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/signature_pad"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:penColor="@android:color/black"
                            />

                    </LinearLayout>


                    <Button
                        android:id="@+id/net_save"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:onClick="upload_data"
                        android:text="@string/save" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>